# tritonn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-arm  install-arm  toolchain.cmake  tritonn-build  verinc  verinc.sh
cert/: new_certf1  open62541.cnf  tritonn.cnf
cmake/: CreateOpkg.cmake  FindProtobuf.cmake  UsefulMacros.cmake
docs/: JSON.docx  kernel.xml  sid.txt  test.xml.variable.csv  test_sikn.xml.variable.csv  Стандартные регистры Modbus.xlsx  Уровни доступа.xlsx
redist/candrv/: kandrv_check.c  rpmsg_connector.c
redist/protobuf/: protoc
src/: CMakeLists.txt  tritonn_version.h.in  tritonn_version.txt.in
src/candrv/: rpmsg_connector.h  rpmsg_connector_common.h
src/catchtest/: catch.hpp
src/checkxml/: CMakeLists.txt  main.cpp
src/open62541/: CMakeLists.txt  open62541.c  open62541.h
src/shared/: CMakeLists.txt  adler.c  bashcolor.h  bits_array.cpp  bits_array.h  common.cpp  container.cpp  container.h  crc32.h  datetime.cpp  datetime.h  def.h  event_eid.h  hash.cpp  hash.h  locker.h  log_client.cpp  log_client.h  log_defines.h  log_manager.cpp  log_manager.h  module_def.h  packet_answe.cpp  packet_answe.h  packet_client.cpp  packet_client.h  packet_get.cpp  packet_get.h  packet_getanswe.cpp  packet_getanswe.h  packet_log.cpp  packet_log.h  packet_login.cpp  packet_login.h  packet_loginanswe.cpp  packet_loginanswe.h  packet_set.cpp  packet_set.h  packet_setanswe.cpp  packet_setanswe.h  (+29 more)
src/testevent/: CMakeLists.txt  event_manager.cpp  event_manager.h  main.cpp
src/tests/: CMakeLists.txt  simpletest.gen.cpp  test.cpp  test.h  test_1.cpp  test_ai.cpp  test_average.cpp  test_cinvisc.cpp  test_dens.cpp  test_di.cpp  test_fi.cpp  test_masswater.cpp  test_rvar.cpp  test_station.cpp  test_stream.cpp  test_thread.cpp  test_thread.h
src/tritonn/: CMakeLists.txt  bits_array.cpp  bits_array.h  comment_defines.h  compared_values.cpp  compared_values.h  data_ai.cpp  data_ai.h  data_config.cpp  data_config.h  data_counter.cpp  data_counter.h  data_denssol.cpp  data_denssol.h  data_di.cpp  data_di.h  data_do.cpp  data_do.h  data_interface.cpp  data_interface.h  data_limit.cpp  data_limit.h  data_link.cpp  data_link.h  data_manager.cpp  data_manager.h  data_module.cpp  data_module.h  data_objunits.cpp  data_objunits.h  data_reduceddensity.cpp  data_reduceddensity.h  data_report.cpp  data_report.h  data_rvar.cpp  data_rvar.h  data_sampler.cpp  data_sampler.h  data_selector.cpp  data_selector.h  (+83 more)
src/tritonn/data/: ai.cpp  ai.h  ao.cpp  ao.h  average.cpp  average.h  cinematicviscosity.cpp  cinematicviscosity.h  counter.cpp  counter.h  di.cpp  di.h  do.cpp  do.h  dump.h  dynamicviscosity.cpp  dynamicviscosity.h  kinematicviscosity.cpp  kinematicviscosity.h  limit.cpp  limit.h  link.cpp  link.h  manager_dump.cpp  manager_md.cpp  masswater.cpp  masswater.h  prove.cpp  prove.h  scale.cpp  scale.h  source.cpp  source.h  station.cpp  station.h  stream.cpp  stream.h  volwater.cpp  volwater.h
src/tritonn/event/: client.cpp  client.h  eid.h  event.cpp  event.h  manager.cpp  manager.h
src/tritonn/interface/: interface.cpp  interface.h  modbus_datablocks.cpp  modbus_datablocks.h  modbustcpslave_client.cpp  modbustcpslave_client.h  modbustcpslave_manager.cpp  modbustcpslave_manager.h  opcua_manager.cpp  opcua_manager.h
src/tritonn/io/: ai_channel.cpp  ai_channel.h  aiinterface.h  ao_channel.cpp  ao_channel.h  aointerface.h  basechannel.cpp  basechannel.h  baseinterface.h  basemodule.cpp  basemodule.h  correctpoint.h  crminterface.h  defines.h  di_channel.cpp  di_channel.h  do_channel.cpp  do_channel.h  fi_channel.cpp  fi_channel.h  fiinterface.h  manager.cpp  manager.h  module_ai6.cpp  module_ai6.h  module_ai6a.cpp  module_ai6a.h  module_ai6p.cpp  module_ai6p.h  module_ao4.cpp  module_ao4.h  module_cpu.cpp  module_cpu.h  module_crm.cpp  module_crm.h  module_di16.cpp  module_di16.h  module_di8do8.cpp  module_di8do8.h  module_do16.cpp  (+3 more)
src/ttce/: CMakeLists.txt  event_info.h  main.cpp
src/ttterm/: CMakeLists.txt  display_command.cpp  display_manager.cpp  display_manager.h  main.cpp  terminal.h  tritonn_manager.cpp  tritonn_manager.h  ttterm_version.h
src/ttutil/: CMakeLists.txt  main.cpp
src/xml/: CMakeLists.txt  xml_util.cpp  xml_util.h  xmlfile.cpp  xmlfile.h
utils/: cp-help.sh
utils/cert/: extensions.cnf  new_certf
utils/nginx/: nginx.conf
utils/openssl/: make_openssl
www_test/: answe.txt  i.loaddump.txt  i.status.txt  json.sh  reg_data.get.txt  req_i.conf.txt  req_i.listconf.txt  req_i.restart.txt  req_i.status.txt  ya.txt
xsd/: kernel.xsd  systemtext.xsd  tritonn.xsd
